--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
         with:
           python-version: '3.10'
 
+      - uses: mymindstorm/setup-emsdk@v11
+
       - name: (Windows) Set up MinGW
         if: ${{ startsWith(matrix.identifier, 'windows') }}
         uses: egor-tensin/setup-mingw@v2
@@ -50,6 +52,12 @@ jobs:
         if: ${{ startsWith(matrix.identifier, 'linux') }}
         run: |
           make test -j`nproc`
+
+      - name: (Linux) Build emscripten wasm module
+        if: ${{ startsWith(matrix.identifier, 'linux') }}
+        run: |
+          emmake make CC=emcc
+          emcc dist/libsm64.so -o libsm64.js
 
       - name: Upload build
         uses: actions/upload-artifact@v4
