--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,18 +31,6 @@ jobs:
         if: ${{ startsWith(matrix.identifier, 'windows') }}
         uses: egor-tensin/setup-mingw@v2
 
-      - uses: msys2/setup-msys2@v2
-        if: ${{ startsWith(matrix.identifier, 'windows') }}
-        with:
-          msystem: MSYS
-
-      - name: (Windows) Install Test Dependencies
-        if: ${{ startsWith(matrix.identifier, 'windows') }}
-        shell: msys2 {0}
-        run: |
-          makepkg-mingw -sCLfc --noconfirm --noprogressbar
-          pacman -S mingw-w64-x86_64-SDL2 mingw-w64-x86_64-glew
-
       - name: (Windows) Prepare cross compilation
         if: ${{ startsWith(matrix.identifier, 'windows') }}
         shell: sh
@@ -50,17 +38,18 @@ jobs:
           echo "OS=Windows_NT" >> $GITHUB_ENV
 
       - name: (Linux) Install dependencies
-        if: ${{ startsWith(matrix.identifier, 'linux') }}
+        if: ${{ startsWith(matrix.identifier, 'linux') || startsWith(matrix.identifier, 'windows') }}
         run: |
           sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
           sudo apt-get update -y -qq
-          sudo apt-get install libsdl2-dev libglew-dev
+          sudo apt-get install -y libsdl2-dev libglew-dev
 
       - name: Build shared library
         run: |
           make lib -j`nproc`
 
       - name: Build test executable
+        if: ${{ !startsWith(matrix.identifier, 'macos') }}
         run: |
           make test -j`nproc`
 
