--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,12 +37,12 @@ jobs:
         run: |
           echo "OS=Windows_NT" >> $GITHUB_ENV
 
-      - name: (Linux) Install dependencies
+      - name: (Linux and Windows) Install dependencies
         if: ${{ startsWith(matrix.identifier, 'linux') || startsWith(matrix.identifier, 'windows') }}
         run: |
           sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
           sudo apt-get update -y -qq
-          sudo apt-get install -y libsdl2-dev libglew-dev
+          sudo apt-get install libsdl2-dev libglew-dev
 
       - name: Build shared library
         run: |
