See if this fixes emscripten compilation

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,8 @@ jobs:
             os: ubuntu-latest
           - identifier: windows
             os: ubuntu-latest
+          - identifier: emscripten
+            os: ubuntu-latest
           - identifier: macos
             os: macos-latest
     runs-on: ${{ matrix.os }}
@@ -25,10 +27,12 @@ jobs:
         with:
           python-version: '3.10'
 
-      - uses: mymindstorm/setup-emsdk@v14
+      - name: (Emscripten) Set up Emscripten
+        uses: mymindstorm/setup-emsdk@v14
+        if: ${{ startsWith(matrix.identifier, 'windows') }}
 
       - name: (Windows) Set up MinGW
-        if: ${{ startsWith(matrix.identifier, 'windows') }}
+        if: ${{ startsWith(matrix.identifier, 'emscripten') }}
         uses: egor-tensin/setup-mingw@v2
 
       - name: (Windows) Prepare cross compilation
@@ -37,31 +41,28 @@ jobs:
         run: |
           echo "OS=Windows_NT" >> $GITHUB_ENV
 
-      - name: (Linux and Windows) Install dependencies
-        if: ${{ startsWith(matrix.identifier, 'linux') || startsWith(matrix.identifier, 'windows') }}
+      - name: (Linux and Emscripten) Install dependencies
+        if: ${{ startsWith(matrix.identifier, 'linux') || startsWith(matrix.identifier, 'emscripten') }}
         run: |
           sudo add-apt-repository -y "deb http://archive.ubuntu.com/ubuntu `lsb_release -sc` main universe restricted multiverse"
           sudo apt-get update -y -qq
           sudo apt-get install libsdl2-dev libglew-dev
 
       - name: Build shared library
+        if: ${{ !startsWith(matrix.identifier, 'emscripten') }}
         run: |
           make lib -j`nproc`
 
       - name: Build test executable
-        if: ${{ !startsWith(matrix.identifier, 'macos') }}
+        if: ${{ startsWith(matrix.identifier, 'linux') }}
         run: |
           make test -j`nproc`
 
-      - name: (Linux) Build emscripten wasm module
-        if: ${{ startsWith(matrix.identifier, 'linux') }}
+      - name: (Emscripten) Build emscripten wasm module
+        if: ${{ startsWith(matrix.identifier, 'emscripten') }}
         run: |
           emmake make CC=emcc
-          echo "Printing Main folder"
-          ls .
-          echo "Printing dist folder"
-          ls ./dist
-          emcc ./dist/libsm64.so -o ./dist/libsm64.js
+          emcc ./dist/libsm64.so -o ./dist/libsm64.js -s EXPORT_ES6=1 -s MODULARIZE=1
 
       - name: Upload build
         uses: actions/upload-artifact@v4
