Try it without linkable...

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
         if: ${{ startsWith(matrix.identifier, 'emscripten') }}
         run: |
           emmake make lib CC=emcc
-          emcc ./dist/libsm64.so -o ./dist/libsm64.js
+          emcc ./dist/libsm64.so -o ./dist/libsm64.js -s EXPORT_ES6=1 -s MODULARIZE=1 -s EXPORT_ALL=1
 
       - name: Upload build
         uses: actions/upload-artifact@v4
